--- a/index.html
+++ b/index.html
@@ -22,8 +22,55 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+<header>
+	<div class="header">
+		<div class="wrapper">
+			<a href="#" class="header__logo">Bafins.ru</a>
+			<div class="header__contact">
+				<a href="tel:8 800 000-00-00" class="header__phone">8 800 000-00-00</a>
+				<span class="header__contact header__contact-text">звонок бесплатный</span>
+			</div>
+		</div>
+		<div class="header__menu">
+			<ul class="topmenu">
+				<li class="topmenu__item"><a href="#">Юридические услуги</a></li>
+				<li class="topmenu__item"><a href="#">Бухгалтерские услуги</a></li>
+				<li class="topmenu__item">
+					<a href="#">Открытие счетов</a>
+					<ul class="topmenu-inner">
+						<li class="topmenu-inner__item">Работаем с банками</li>
+						<li class="topmenu-inner__item"><a href="#">СберБанк</a></li>
+						<li class="topmenu-inner__item"><a href="#">ПромСвязьБанк</a></li>
+						<li class="topmenu-inner__item"><a href="#">Возрождение</a></li>
+						<li class="topmenu-inner__item"><a href="#">ЮниСтрим</a></li>
+						<li class="topmenu-inner__item"><a href="#">ВТБ БанкМосквы</a></li>
+						<li class="topmenu-inner__item"><a href="#">Легион</a></li>
+					</ul>
+				</li>
+				<li class="topmenu__item"><a href="#">Контакты</a></li>
+			</ul>
+		</div>
+	</div>
+</header>
+<section>
+	<div class="container">
+		<div class="conteiner__item">
+			<div class="wrapper activities">
+				<p class="activities__title">ОСНОВНЫЕ НАПРАВЛЕНИЯ НАШЕЙ ДЕЯТЕЛЬНОСТИ</p>
+				<p>«Banfins.ru» более 18-и лет успешно занимается финансовым и юридическим сопровождением бизнеса в России. Тысячи клиентов со всех регионов страны доверили нам свое будущее. Сегодня мы — безусловный лидер рынка, и за этим результатом стоит сплоченная команда.</p>
+				<p>Наша цель - сделать бизнес в России более доступным для всех, чтобы каждый предприниматель знал, что на всех этапах развития его бизнеса, начиная с открытия предприятия и заканчивая его продажей или закрытием, он может обратиться к нам за помощью в подготовке необходимой документации, при этом все будет исполненно в точно оговоренные сроки и без бюрократических проволочек.</p>
+			</div>
+			<div class="wrapper services services-bg">
+				<p class="services__title">Юридические услуги</p>
+				<p>Открытие и закрытие ООО, ИП, ЗАО. Открытие Р/С в любых банках. Ликвидация и реорганизация без проверок. Юридические адреса с подтверждением. Продажа готовых фирм как с историей, так и нулевых.</p>
+				<!-- <object data="image/02.svg" type="image/svg+xml"></object> -->
+			</div>
+		</div>
+	</div>
+</section>
 
-	<script src="./js/jquery.min.js"></script>
+
+
 	<script src="./js/main.js"></script>
 </body>
 </html>
