--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
 				<p>«Banfins.ru» более 18-и лет успешно занимается финансовым и юридическим сопровождением бизнеса в России. Тысячи клиентов со всех регионов страны доверили нам свое будущее. Сегодня мы — безусловный лидер рынка, и за этим результатом стоит сплоченная команда.</p>
 				<p>Наша цель - сделать бизнес в России более доступным для всех, чтобы каждый предприниматель знал, что на всех этапах развития его бизнеса, начиная с открытия предприятия и заканчивая его продажей или закрытием, он может обратиться к нам за помощью в подготовке необходимой документации, при этом все будет исполненно в точно оговоренные сроки и без бюрократических проволочек.</p>
 			</div>
-			<div class="wrapper services services-bg">
+			
+		</div>
+		<div class="container__item container__item-bg">
+			<div class="wrapper services">
 				<p class="services__title">Юридические услуги</p>
-				<p>Открытие и закрытие ООО, ИП, ЗАО. Открытие Р/С в любых банках. Ликвидация и реорганизация без проверок. Юридические адреса с подтверждением. Продажа готовых фирм как с историей, так и нулевых.</p>
+				<p>Открытие и закрытие ООО, ИП, ЗАО. Открытие Р/С в любых банках. Ликвидация и реорганизация без<br>проверок. Юридические адреса с подтверждением. Продажа готовых фирм как с историей, так и нулевых.</p>
+				
 				<!-- <object data="image/02.svg" type="image/svg+xml"></object> -->
 			</div>
 		</div>
