add service block

--- a/index.html
+++ b/index.html
@@ -66,7 +66,38 @@
 			<div class="wrapper services">
 				<p class="services__title">Юридические услуги</p>
 				<p>Открытие и закрытие ООО, ИП, ЗАО. Открытие Р/С в любых банках. Ликвидация и реорганизация без<br>проверок. Юридические адреса с подтверждением. Продажа готовых фирм как с историей, так и нулевых.</p>
-				
+				<div class="services__wrapper">
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/01.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Регистрация ООО</p>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/02.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Регистрация ИП</p>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/03.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Юридические адреса</p>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/04.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Регистрация Офшоров</p>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/05.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Внесение изменений в ЕГРЮЛ</p>
+					</div>
+				</div>
 				<!-- <object data="image/02.svg" type="image/svg+xml"></object> -->
 			</div>
 		</div>
