--- a/index.html
+++ b/index.html
@@ -101,6 +101,75 @@
 				<!-- <object data="image/02.svg" type="image/svg+xml"></object> -->
 			</div>
 		</div>
+		<div class="container__item">
+			<div class="wrapper services">
+				<p class="services__title">Бухгалтерские услуги</p>
+				<p>Бухгалтерские услуги, предоставляемые компанией «Banfins.ru», не исчерпываются внесением первичной документации в соответствующие базы данных, а также заполнением форм бухгалтерской и налоговой отчетности. Мы стараемся выполнять все задачи, с которыми вы можете столкнуться в процессе своей предпринимательской деятельности.</p>
+				<div class="services__wrapper">
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/06.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Бухгалтерское обслуживание или аутсорсинг</p>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/07.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Бухгалтерская отчётность</p>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/08.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Восстановление бухгалтерского учёта</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container__item container__item-bg">
+			<div class="wrapper services services-bill">
+				<p class="services__title">Открытие счетов</p>
+				<p>Открытие расчетного счета организации давно стало необходимость для бизнеса. Однако прошло то время, когда этот процесс занимал 1 час. Не станем преувеличивать проблему, однако часто при открытии счета у банка или у Росфинмониторинга возникают те или иные вопросы, на которые необходимо подготовить ответ. В условиях нехватки времени для предпринимателя это может стать настоящей «головной болью».</p>
+				<div class="services__wrapper services__wrapper-without">
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/sbrbank.png" alt="">
+						</div>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/prosvazbank.png" alt="">
+						</div>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/vozrogdenie.png" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="services__wrapper services__wrapper-without">
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/unistream.png" alt="">
+						</div>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/vtb.png" alt="">
+						</div>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/legion.png" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="button-wrapper">
+					<a href="#" class="button">подробнее об открытии счетов</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </section>
 
