--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 	</div>
 </header>
 <section>
-	<div class="container">
+	<div class="container container-start">
+		<div class="container__bg"></div>
 		<div class="conteiner__item">
 			<div class="wrapper activities">
 				<p class="activities__title">ОСНОВНЫЕ НАПРАВЛЕНИЯ НАШЕЙ ДЕЯТЕЛЬНОСТИ</p>
@@ -127,7 +128,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container__item container__item-bg">
+		<div class="container__item container__item-bg container__item-nopadding">
 			<div class="wrapper services services-bill">
 				<p class="services__title">Открытие счетов</p>
 				<p>Открытие расчетного счета организации давно стало необходимость для бизнеса. Однако прошло то время, когда этот процесс занимал 1 час. Не станем преувеличивать проблему, однако часто при открытии счета у банка или у Росфинмониторинга возникают те или иные вопросы, на которые необходимо подготовить ответ. В условиях нехватки времени для предпринимателя это может стать настоящей «головной болью».</p>
@@ -170,8 +171,36 @@
 				</div>
 			</div>
 		</div>
+		<div class="container__item">
+			<div class="wrapper services">
+				<p class="services__title">Обратная связь</p>
+				<p>У вас остались вопросы? Мы Вам перезвоним! Это бесплатно. Вы можете получить консультацию или коммерческое предложение, заполнив короткую форму.</p>
+				<div class="services__wrapper">
+					<div class="services__half">
+						<p>Остались вопроосы?</p>
+						<a href="#" class="button button-big">Получить консультацию</a>
+					</div>
+					<div class="services__half">
+						<p>Остались вопроосы?</p>
+						<a href="#" class="button button-big">Получить предложение</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </section>
+<footer>
+	<div class="footer">
+		<div class="wrapper">
+			<p class="footer__phone">8-800-000-0000 / 8-800-000-0000</p>
+			<p class="footer__adress">«Bafins.ru», г. Москва, Красная площадь., 2А</p>
+			<p class="footer__copy">© 2000-2017 Bafins.ru. Все права защищены. Использование материалов сайта возможно только при согласии правообладателя.</p>
+		</div>
+		<div class="footer__create">
+			<a href="#" target="_blank" class="footer__create-link"></a>
+		</div>
+	</div>
+</footer>
 
 
 
