--- a/index.html
+++ b/index.html
@@ -22,188 +22,186 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<header>
-	<div class="header">
-		<div class="wrapper">
-			<a href="#" class="header__logo">Bafins.ru</a>
-			<div class="header__contact">
-				<a href="tel:8 800 000-00-00" class="header__phone">8 800 000-00-00</a>
-				<span class="header__contact header__contact-text">звонок бесплатный</span>
-			</div>
-		</div>
-		<div class="header__menu">
-			<ul class="topmenu">
-				<li class="topmenu__item"><a href="#">Юридические услуги</a></li>
-				<li class="topmenu__item"><a href="#">Бухгалтерские услуги</a></li>
-				<li class="topmenu__item">
-					<a href="#">Открытие счетов</a>
-					<ul class="topmenu-inner">
-						<li class="topmenu-inner__item">Работаем с банками</li>
-						<li class="topmenu-inner__item"><a href="#">СберБанк</a></li>
-						<li class="topmenu-inner__item"><a href="#">ПромСвязьБанк</a></li>
-						<li class="topmenu-inner__item"><a href="#">Возрождение</a></li>
-						<li class="topmenu-inner__item"><a href="#">ЮниСтрим</a></li>
-						<li class="topmenu-inner__item"><a href="#">ВТБ БанкМосквы</a></li>
-						<li class="topmenu-inner__item"><a href="#">Легион</a></li>
-					</ul>
-				</li>
-				<li class="topmenu__item"><a href="#">Контакты</a></li>
-			</ul>
-		</div>
-	</div>
-</header>
-<section>
-	<div class="container container-start">
-		<div class="container__bg"></div>
-		<div class="conteiner__item">
-			<div class="wrapper activities">
-				<p class="activities__title">ОСНОВНЫЕ НАПРАВЛЕНИЯ НАШЕЙ ДЕЯТЕЛЬНОСТИ</p>
-				<p>«Banfins.ru» более 18-и лет успешно занимается финансовым и юридическим сопровождением бизнеса в России. Тысячи клиентов со всех регионов страны доверили нам свое будущее. Сегодня мы — безусловный лидер рынка, и за этим результатом стоит сплоченная команда.</p>
-				<p>Наша цель - сделать бизнес в России более доступным для всех, чтобы каждый предприниматель знал, что на всех этапах развития его бизнеса, начиная с открытия предприятия и заканчивая его продажей или закрытием, он может обратиться к нам за помощью в подготовке необходимой документации, при этом все будет исполненно в точно оговоренные сроки и без бюрократических проволочек.</p>
-			</div>
-			
-		</div>
-		<div class="container__item container__item-bg">
-			<div class="wrapper services">
-				<p class="services__title">Юридические услуги</p>
-				<p>Открытие и закрытие ООО, ИП, ЗАО. Открытие Р/С в любых банках. Ликвидация и реорганизация без<br>проверок. Юридические адреса с подтверждением. Продажа готовых фирм как с историей, так и нулевых.</p>
-				<div class="services__wrapper">
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<object data="images/01.svg" type="image/svg+xml"></object>
-						</div>
-						<p class="services__item-text">Регистрация ООО</p>
-					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<object data="images/02.svg" type="image/svg+xml"></object>
-						</div>
-						<p class="services__item-text">Регистрация ИП</p>
-					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<object data="images/03.svg" type="image/svg+xml"></object>
-						</div>
-						<p class="services__item-text">Юридические адреса</p>
-					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<object data="images/04.svg" type="image/svg+xml"></object>
-						</div>
-						<p class="services__item-text">Регистрация Офшоров</p>
-					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<object data="images/05.svg" type="image/svg+xml"></object>
-						</div>
-						<p class="services__item-text">Внесение изменений в ЕГРЮЛ</p>
-					</div>
-				</div>
-				<!-- <object data="image/02.svg" type="image/svg+xml"></object> -->
-			</div>
-		</div>
-		<div class="container__item">
-			<div class="wrapper services">
-				<p class="services__title">Бухгалтерские услуги</p>
-				<p>Бухгалтерские услуги, предоставляемые компанией «Banfins.ru», не исчерпываются внесением первичной документации в соответствующие базы данных, а также заполнением форм бухгалтерской и налоговой отчетности. Мы стараемся выполнять все задачи, с которыми вы можете столкнуться в процессе своей предпринимательской деятельности.</p>
-				<div class="services__wrapper">
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<object data="images/06.svg" type="image/svg+xml"></object>
-						</div>
-						<p class="services__item-text">Бухгалтерское обслуживание или аутсорсинг</p>
-					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<object data="images/07.svg" type="image/svg+xml"></object>
-						</div>
-						<p class="services__item-text">Бухгалтерская отчётность</p>
-					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<object data="images/08.svg" type="image/svg+xml"></object>
-						</div>
-						<p class="services__item-text">Восстановление бухгалтерского учёта</p>
-					</div>
+<div class="body">
+	<header>
+		<div class="header">
+			<div class="wrapper">
+				<a href="#" class="header__logo">Bafins.ru</a>
+				<div class="header__contact">
+					<a href="tel:8 800 000-00-00" class="header__phone">8 800 000-00-00</a>
+					<span class="header__contact header__contact-text">звонок бесплатный</span>
 				</div>
 			</div>
+			<div class="header__menu">
+				<div class="menu-show c-hamburger c-hamburger--htx" data-role="menu-show"><span></span></div>
+				<ul class="topmenu">
+					<li class="topmenu__item"><a href="#">Юридические услуги</a></li>
+					<li class="topmenu__item"><a href="#">Бухгалтерские услуги</a></li>
+					<li class="topmenu__item">
+						<a href="#">Открытие счетов</a>
+						<ul class="topmenu-inner">
+							<li class="topmenu-inner__item">Работаем с банками</li>
+							<li class="topmenu-inner__item"><a href="#">СберБанк</a></li>
+							<li class="topmenu-inner__item"><a href="#">ПромСвязьБанк</a></li>
+							<li class="topmenu-inner__item"><a href="#">Возрождение</a></li>
+							<li class="topmenu-inner__item"><a href="#">ЮниСтрим</a></li>
+							<li class="topmenu-inner__item"><a href="#">ВТБ БанкМосквы</a></li>
+							<li class="topmenu-inner__item"><a href="#">Легион</a></li>
+						</ul>
+					</li>
+					<li class="topmenu__item"><a href="#">Контакты</a></li>
+				</ul>
+			</div>
 		</div>
-		<div class="container__item container__item-bg container__item-nopadding">
-			<div class="wrapper services services-bill">
-				<p class="services__title">Открытие счетов</p>
-				<p>Открытие расчетного счета организации давно стало необходимость для бизнеса. Однако прошло то время, когда этот процесс занимал 1 час. Не станем преувеличивать проблему, однако часто при открытии счета у банка или у Росфинмониторинга возникают те или иные вопросы, на которые необходимо подготовить ответ. В условиях нехватки времени для предпринимателя это может стать настоящей «головной болью».</p>
-				<div class="services__wrapper services__wrapper-without">
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<img src="images/sbrbank.png" alt="">
+	</header>
+	<section>
+		<div class="container container-start">
+			<div class="container__bg"></div>
+			<div class="conteiner__item">
+				<div class="wrapper activities">
+					<p class="activities__title">ОСНОВНЫЕ НАПРАВЛЕНИЯ НАШЕЙ ДЕЯТЕЛЬНОСТИ</p>
+					<p>«Banfins.ru» более 18-и лет успешно занимается финансовым и юридическим сопровождением бизнеса в России. Тысячи клиентов со всех регионов страны доверили нам свое будущее. Сегодня мы — безусловный лидер рынка, и за этим результатом стоит сплоченная команда.</p>
+					<p>Наша цель - сделать бизнес в России более доступным для всех, чтобы каждый предприниматель знал, что на всех этапах развития его бизнеса, начиная с открытия предприятия и заканчивая его продажей или закрытием, он может обратиться к нам за помощью в подготовке необходимой документации, при этом все будет исполненно в точно оговоренные сроки и без бюрократических проволочек.</p>
+				</div>
+				
+			</div>
+			<div class="container__item container__item-bg">
+				<div class="wrapper services">
+					<p class="services__title">Юридические услуги</p>
+					<p>Открытие и закрытие ООО, ИП, ЗАО. Открытие Р/С в любых банках. Ликвидация и реорганизация без<br>проверок. Юридические адреса с подтверждением. Продажа готовых фирм как с историей, так и нулевых.</p>
+					<div class="services__wrapper">
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<object data="images/01.svg" type="image/svg+xml"></object>
+							</div>
+							<p class="services__item-text">Регистрация ООО</p>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<object data="images/02.svg" type="image/svg+xml"></object>
+							</div>
+							<p class="services__item-text">Регистрация ИП</p>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<object data="images/03.svg" type="image/svg+xml"></object>
+							</div>
+							<p class="services__item-text">Юридические адреса</p>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<object data="images/04.svg" type="image/svg+xml"></object>
+							</div>
+							<p class="services__item-text">Регистрация Офшоров</p>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<object data="images/05.svg" type="image/svg+xml"></object>
+							</div>
+							<p class="services__item-text">Внесение изменений в ЕГРЮЛ</p>
 						</div>
 					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<img src="images/prosvazbank.png" alt="">
+					<!-- <object data="image/02.svg" type="image/svg+xml"></object> -->
+				</div>
+			</div>
+			<div class="container__item">
+				<div class="wrapper services">
+					<p class="services__title">Бухгалтерские услуги</p>
+					<p>Бухгалтерские услуги, предоставляемые компанией «Banfins.ru», не исчерпываются внесением первичной документации в соответствующие базы данных, а также заполнением форм бухгалтерской и налоговой отчетности. Мы стараемся выполнять все задачи, с которыми вы можете столкнуться в процессе своей предпринимательской деятельности.</p>
+					<div class="services__wrapper">
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<object data="images/06.svg" type="image/svg+xml"></object>
+							</div>
+							<p class="services__item-text">Бухгалтерское обслуживание или аутсорсинг</p>
 						</div>
-					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<img src="images/vozrogdenie.png" alt="">
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<object data="images/07.svg" type="image/svg+xml"></object>
+							</div>
+							<p class="services__item-text">Бухгалтерская отчётность</p>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<object data="images/08.svg" type="image/svg+xml"></object>
+							</div>
+							<p class="services__item-text">Восстановление бухгалтерского учёта</p>
 						</div>
 					</div>
 				</div>
-				<div class="services__wrapper services__wrapper-without">
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<img src="images/unistream.png" alt="">
+			</div>
+			<div class="container__item container__item-bg container__item-nopadding">
+				<div class="wrapper services services-bill">
+					<p class="services__title">Открытие счетов</p>
+					<p>Открытие расчетного счета организации давно стало необходимость для бизнеса. Однако прошло то время, когда этот процесс занимал 1 час. Не станем преувеличивать проблему, однако часто при открытии счета у банка или у Росфинмониторинга возникают те или иные вопросы, на которые необходимо подготовить ответ. В условиях нехватки времени для предпринимателя это может стать настоящей «головной болью».</p>
+					<div class="services__wrapper services__wrapper-without">
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<img src="images/sbrbank.png" alt="">
+							</div>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<img src="images/prosvazbank.png" alt="">
+							</div>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<img src="images/vozrogdenie.png" alt="">
+							</div>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<img src="images/unistream.png" alt="">
+							</div>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<img src="images/vtb.png" alt="">
+							</div>
+						</div>
+						<div class="services__item">
+							<div class="services__item-wrapper">
+								<img src="images/legion.png" alt="">
+							</div>
 						</div>
 					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<img src="images/vtb.png" alt="">
-						</div>
-					</div>
-					<div class="services__item">
-						<div class="services__item-wrapper">
-							<img src="images/legion.png" alt="">
-						</div>
+					<div class="button-wrapper">
+						<a href="#" class="button">подробнее об открытии счетов</a>
 					</div>
 				</div>
-				<div class="button-wrapper">
-					<a href="#" class="button">подробнее об открытии счетов</a>
+			</div>
+			<div class="container__item">
+				<div class="wrapper services cont">
+					<p class="services__title">Обратная связь</p>
+					<p>У вас остались вопросы? Мы Вам перезвоним! Это бесплатно. Вы можете получить консультацию или коммерческое предложение, заполнив короткую форму.</p>
+					<div class="services__wrapper">
+						<div class="services__half">
+							<p>Остались вопроосы?</p>
+							<a href="#" class="button button-big">Получить консультацию</a>
+						</div>
+						<div class="services__half">
+							<p>Остались вопроосы?</p>
+							<a href="#" class="button button-big">Получить предложение</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="container__item">
-			<div class="wrapper services">
-				<p class="services__title">Обратная связь</p>
-				<p>У вас остались вопросы? Мы Вам перезвоним! Это бесплатно. Вы можете получить консультацию или коммерческое предложение, заполнив короткую форму.</p>
-				<div class="services__wrapper">
-					<div class="services__half">
-						<p>Остались вопроосы?</p>
-						<a href="#" class="button button-big">Получить консультацию</a>
-					</div>
-					<div class="services__half">
-						<p>Остались вопроосы?</p>
-						<a href="#" class="button button-big">Получить предложение</a>
-					</div>
-				</div>
+	</section>
+	<footer>
+		<div class="footer">
+			<div class="wrapper">
+				<p class="footer__phone">8-800-000-0000 <span>/</span> 8-800-000-0000</p>
+				<p class="footer__adress">«Bafins.ru», г. Москва, Красная площадь., 2А</p>
+				<p class="footer__copy">© 2000-2017 Bafins.ru. Все права защищены. Использование материалов сайта возможно только при согласии правообладателя.</p>
+			</div>
+			<div class="footer__create">
+				<a href="#" target="_blank" class="footer__create-link"></a>
 			</div>
 		</div>
-	</div>
-</section>
-<footer>
-	<div class="footer">
-		<div class="wrapper">
-			<p class="footer__phone">8-800-000-0000 / 8-800-000-0000</p>
-			<p class="footer__adress">«Bafins.ru», г. Москва, Красная площадь., 2А</p>
-			<p class="footer__copy">© 2000-2017 Bafins.ru. Все права защищены. Использование материалов сайта возможно только при согласии правообладателя.</p>
-		</div>
-		<div class="footer__create">
-			<a href="#" target="_blank" class="footer__create-link"></a>
-		</div>
-	</div>
-</footer>
-
-
-
-	<script src="./js/main.js"></script>
+	</footer>
+</div>
+<script src="./js/main.js"></script>
 </body>
 </html>
