--- a/index.html
+++ b/index.html
@@ -1,218 +1,136 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta name="theme-color" content="#000000">
-	<title>Pavel Rafeev | Frontend developer</title>
-	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-	<meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
-	<link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-<div class="body">
-	<header>
-		<div class="header">
-			<div class="wrapper">
-				<a href="#" class="header__logo">Bafins.ru</a>
-				<div class="header__contact">
-					<a href="tel:8 800 000-00-00" class="header__phone">8 800 000-00-00</a>
-					<span class="header__contact header__contact-text">звонок бесплатный</span>
-				</div>
+//= tpl/header.html
+<section>
+	<div class="container container-start">
+		<div class="container__bg"></div>
+		<div class="conteiner__item">
+			<div class="wrapper activities">
+				<p class="activities__title">ОСНОВНЫЕ НАПРАВЛЕНИЯ НАШЕЙ ДЕЯТЕЛЬНОСТИ</p>
+				<p>«Banfins.ru» более 18-и лет успешно занимается финансовым и юридическим сопровождением бизнеса в России. Тысячи клиентов со всех регионов страны доверили нам свое будущее. Сегодня мы — безусловный лидер рынка, и за этим результатом стоит сплоченная команда.</p>
+				<p>Наша цель - сделать бизнес в России более доступным для всех, чтобы каждый предприниматель знал, что на всех этапах развития его бизнеса, начиная с открытия предприятия и заканчивая его продажей или закрытием, он может обратиться к нам за помощью в подготовке необходимой документации, при этом все будет исполненно в точно оговоренные сроки и без бюрократических проволочек.</p>
 			</div>
-			<div class="header__menu">
-				<div class="menu-show c-hamburger c-hamburger--htx" data-role="menu-show"><span></span></div>
-				<ul class="topmenu">
-					<li class="topmenu__item"><a href="#">Юридические услуги</a></li>
-					<li class="topmenu__item"><a href="#">Бухгалтерские услуги</a></li>
-					<li class="topmenu__item">
-						<a href="#">Открытие счетов</a>
-						<ul class="topmenu-inner">
-							<li class="topmenu-inner__item">Работаем с банками</li>
-							<li class="topmenu-inner__item"><a href="#">СберБанк</a></li>
-							<li class="topmenu-inner__item"><a href="#">ПромСвязьБанк</a></li>
-							<li class="topmenu-inner__item"><a href="#">Возрождение</a></li>
-							<li class="topmenu-inner__item"><a href="#">ЮниСтрим</a></li>
-							<li class="topmenu-inner__item"><a href="#">ВТБ БанкМосквы</a></li>
-							<li class="topmenu-inner__item"><a href="#">Легион</a></li>
-						</ul>
-					</li>
-					<li class="topmenu__item"><a href="#">Контакты</a></li>
-				</ul>
-			</div>
+			
 		</div>
-	</header>
-	<section>
-		<div class="container container-start">
-			<div class="container__bg"></div>
-			<div class="conteiner__item">
-				<div class="wrapper activities">
-					<p class="activities__title">ОСНОВНЫЕ НАПРАВЛЕНИЯ НАШЕЙ ДЕЯТЕЛЬНОСТИ</p>
-					<p>«Banfins.ru» более 18-и лет успешно занимается финансовым и юридическим сопровождением бизнеса в России. Тысячи клиентов со всех регионов страны доверили нам свое будущее. Сегодня мы — безусловный лидер рынка, и за этим результатом стоит сплоченная команда.</p>
-					<p>Наша цель - сделать бизнес в России более доступным для всех, чтобы каждый предприниматель знал, что на всех этапах развития его бизнеса, начиная с открытия предприятия и заканчивая его продажей или закрытием, он может обратиться к нам за помощью в подготовке необходимой документации, при этом все будет исполненно в точно оговоренные сроки и без бюрократических проволочек.</p>
-				</div>
-				
-			</div>
-			<div class="container__item container__item-bg">
-				<div class="wrapper services">
-					<p class="services__title">Юридические услуги</p>
-					<p>Открытие и закрытие ООО, ИП, ЗАО. Открытие Р/С в любых банках. Ликвидация и реорганизация без<br>проверок. Юридические адреса с подтверждением. Продажа готовых фирм как с историей, так и нулевых.</p>
-					<div class="services__wrapper">
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<object data="images/01.svg" type="image/svg+xml"></object>
-							</div>
-							<p class="services__item-text">Регистрация ООО</p>
+		<div class="container__item container__item-bg">
+			<div class="wrapper services">
+				<p class="services__title">Юридические услуги</p>
+				<p>Открытие и закрытие ООО, ИП, ЗАО. Открытие Р/С в любых банках. Ликвидация и реорганизация без<br>проверок. Юридические адреса с подтверждением. Продажа готовых фирм как с историей, так и нулевых.</p>
+				<div class="services__wrapper">
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/01.svg" type="image/svg+xml"></object>
 						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<object data="images/02.svg" type="image/svg+xml"></object>
-							</div>
-							<p class="services__item-text">Регистрация ИП</p>
-						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<object data="images/03.svg" type="image/svg+xml"></object>
-							</div>
-							<p class="services__item-text">Юридические адреса</p>
-						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<object data="images/04.svg" type="image/svg+xml"></object>
-							</div>
-							<p class="services__item-text">Регистрация Офшоров</p>
-						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<object data="images/05.svg" type="image/svg+xml"></object>
-							</div>
-							<p class="services__item-text">Внесение изменений в ЕГРЮЛ</p>
-						</div>
+						<p class="services__item-text">Регистрация ООО</p>
 					</div>
-					<!-- <object data="image/02.svg" type="image/svg+xml"></object> -->
-				</div>
-			</div>
-			<div class="container__item">
-				<div class="wrapper services">
-					<p class="services__title">Бухгалтерские услуги</p>
-					<p>Бухгалтерские услуги, предоставляемые компанией «Banfins.ru», не исчерпываются внесением первичной документации в соответствующие базы данных, а также заполнением форм бухгалтерской и налоговой отчетности. Мы стараемся выполнять все задачи, с которыми вы можете столкнуться в процессе своей предпринимательской деятельности.</p>
-					<div class="services__wrapper">
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<object data="images/06.svg" type="image/svg+xml"></object>
-							</div>
-							<p class="services__item-text">Бухгалтерское обслуживание или аутсорсинг</p>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/02.svg" type="image/svg+xml"></object>
 						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<object data="images/07.svg" type="image/svg+xml"></object>
-							</div>
-							<p class="services__item-text">Бухгалтерская отчётность</p>
-						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<object data="images/08.svg" type="image/svg+xml"></object>
-							</div>
-							<p class="services__item-text">Восстановление бухгалтерского учёта</p>
-						</div>
+						<p class="services__item-text">Регистрация ИП</p>
 					</div>
-				</div>
-			</div>
-			<div class="container__item container__item-bg container__item-nopadding">
-				<div class="wrapper services services-bill">
-					<p class="services__title">Открытие счетов</p>
-					<p>Открытие расчетного счета организации давно стало необходимость для бизнеса. Однако прошло то время, когда этот процесс занимал 1 час. Не станем преувеличивать проблему, однако часто при открытии счета у банка или у Росфинмониторинга возникают те или иные вопросы, на которые необходимо подготовить ответ. В условиях нехватки времени для предпринимателя это может стать настоящей «головной болью».</p>
-					<div class="services__wrapper services__wrapper-without">
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<img src="images/sbrbank.png" alt="">
-							</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/03.svg" type="image/svg+xml"></object>
 						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<img src="images/prosvazbank.png" alt="">
-							</div>
-						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<img src="images/vozrogdenie.png" alt="">
-							</div>
-						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<img src="images/unistream.png" alt="">
-							</div>
-						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<img src="images/vtb.png" alt="">
-							</div>
-						</div>
-						<div class="services__item">
-							<div class="services__item-wrapper">
-								<img src="images/legion.png" alt="">
-							</div>
-						</div>
+						<p class="services__item-text">Юридические адреса</p>
 					</div>
-					<div class="button-wrapper">
-						<a href="#" class="button">подробнее об открытии счетов</a>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/04.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Регистрация Офшоров</p>
 					</div>
-				</div>
-			</div>
-			<div class="container__item">
-				<div class="wrapper services cont">
-					<p class="services__title">Обратная связь</p>
-					<p>У вас остались вопросы? Мы Вам перезвоним! Это бесплатно. Вы можете получить консультацию или коммерческое предложение, заполнив короткую форму.</p>
-					<div class="services__wrapper">
-						<div class="services__half">
-							<p>Остались вопроосы?</p>
-							<span data-role="show-popup" for="consult" class="button button-big">Получить консультацию</span>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/05.svg" type="image/svg+xml"></object>
 						</div>
-						<div class="services__half">
-							<p>Остались вопроосы?</p>
-							<span data-role="show-popup" for="faq" class="button button-big">Получить предложение</span>
-						</div>
+						<p class="services__item-text">Внесение изменений в ЕГРЮЛ</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
-	<footer>
-		<div class="footer">
-			<div class="wrapper">
-				<p class="footer__phone">8-800-000-0000 <span>/</span> 8-800-000-0000</p>
-				<p class="footer__adress">«Bafins.ru», г. Москва, Красная площадь., 2А</p>
-				<p class="footer__copy">© 2000-2017 Bafins.ru. Все права защищены. Использование материалов сайта возможно только при согласии правообладателя.</p>
-			</div>
-			<div class="footer__create">
-				<a href="#" target="_blank" class="footer__create-link"></a>
+		<div class="container__item">
+			<div class="wrapper services">
+				<p class="services__title">Бухгалтерские услуги</p>
+				<p>Бухгалтерские услуги, предоставляемые компанией «Banfins.ru», не исчерпываются внесением первичной документации в соответствующие базы данных, а также заполнением форм бухгалтерской и налоговой отчетности. Мы стараемся выполнять все задачи, с которыми вы можете столкнуться в процессе своей предпринимательской деятельности.</p>
+				<div class="services__wrapper">
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/06.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Бухгалтерское обслуживание или аутсорсинг</p>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/07.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Бухгалтерская отчётность</p>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<object data="images/08.svg" type="image/svg+xml"></object>
+						</div>
+						<p class="services__item-text">Восстановление бухгалтерского учёта</p>
+					</div>
+				</div>
 			</div>
 		</div>
-	</footer>
-</div>
-<div class="popup popup-show" id="consult">
-	<div class="popup__wrapper">
-		<p class="popup__title">Получить консультацию</p>
-		<p class="pupup__title popup__title-sm">Телефон</p>
-		<input type="text" class="popup__input">
-		<div class="button-wrapper">
-			<input type="submit" class="button button-big" value="Заказать звонок">
+		<div class="container__item container__item-bg container__item-nopadding">
+			<div class="wrapper services services-bill">
+				<p class="services__title">Открытие счетов</p>
+				<p>Открытие расчетного счета организации давно стало необходимость для бизнеса. Однако прошло то время, когда этот процесс занимал 1 час. Не станем преувеличивать проблему, однако часто при открытии счета у банка или у Росфинмониторинга возникают те или иные вопросы, на которые необходимо подготовить ответ. В условиях нехватки времени для предпринимателя это может стать настоящей «головной болью».</p>
+				<div class="services__wrapper services__wrapper-without">
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/sbrbank.png" alt="">
+						</div>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/prosvazbank.png" alt="">
+						</div>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/vozrogdenie.png" alt="">
+						</div>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/unistream.png" alt="">
+						</div>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/vtb.png" alt="">
+						</div>
+					</div>
+					<div class="services__item">
+						<div class="services__item-wrapper">
+							<img src="images/legion.png" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="button-wrapper">
+					<a href="#" class="button">подробнее об открытии счетов</a>
+				</div>
+			</div>
 		</div>
-		<div class="popup__close"></div>
+		<div class="container__item">
+			<div class="wrapper services cont">
+				<p class="services__title">Обратная связь</p>
+				<p>У вас остались вопросы? Мы Вам перезвоним! Это бесплатно. Вы можете получить консультацию или коммерческое предложение, заполнив короткую форму.</p>
+				<div class="services__wrapper">
+					<div class="services__half">
+						<p>Остались вопроосы?</p>
+						<span data-role="show-popup" for="consult" class="button button-big">Получить консультацию</span>
+					</div>
+					<div class="services__half">
+						<p>Остались вопроосы?</p>
+						<span data-role="show-popup" for="faq" class="button button-big">Получить предложение</span>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-</div>
-<script src="./js/main.js"></script>
-</body>
-</html>
+</section>
+//= tpl/footer.html
